Update gradle build and container